# gen

./: Cargo.toml
src/: main.rs
templates/: add_column.tmpl  create_table.tmpl  drop_column.tmpl
