[package]
name = "thing"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
glob = "0.3.1"
log = "0.4.22"
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
tinytemplate = "1.2.1"
